# server/openapi.yaml
@@ -72,7 +72,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/oauthAuthorizeDto"
+              $ref: "#/components/schemas/oauthUserAuthorizeDto"
       responses:
         "201":
           description: ""
@@ -752,7 +752,7 @@ components:
       required:
         - accessToken
         - user
-    oauthAuthorizeDto:
+    oauthUserAuthorizeDto:
       type: object
       properties:
         code:
@@ -761,13 +761,10 @@ components:
           type: string
         redirectUri:
           type: string
-        projectId:
-          type: string
       required:
         - code
         - state
         - redirectUri
-        - projectId
     WhoAmIResultDto:
       type: object
       properties:
@@ -928,6 +925,22 @@ components:
       required:
         - accessToken
         - member
+    oauthAuthorizeDto:
+      type: object
+      properties:
+        code:
+          type: string
+        state:
+          type: string
+        redirectUri:
+          type: string
+        projectId:
+          type: string
+      required:
+        - code
+        - state
+        - redirectUri
+        - projectId
     CreateAuthMethodDto:
       type: object
       properties:
